feat: add channel cost ratio billing
